--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "antd": "^4.18.9",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.6",
+    "formik": "^2.2.9",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.1",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^6.0.0",
+    "react-google-charts": "^4.0.0",
     "react-hook-form": "^7.25.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
